ajout de 3 cas de test : verifcode, badurl, badparam

--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,18 @@
 			<artifactId>swagger-compat-spec-parser</artifactId>
 			<version>1.0.22</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
